# gen/go/catalog/v1/catalog.pb.validate.go
@@ -688,3 +688,163 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = ListCompaniesResponseValidationError{}
+
+// Validate checks the field values on UpdateCompanyRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *UpdateCompanyRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on UpdateCompanyRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// UpdateCompanyRequestMultiError, or nil if none found.
+func (m *UpdateCompanyRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *UpdateCompanyRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if all {
+		switch v := interface{}(m.GetCompany()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, UpdateCompanyRequestValidationError{
+					field:  "Company",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, UpdateCompanyRequestValidationError{
+					field:  "Company",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetCompany()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return UpdateCompanyRequestValidationError{
+				field:  "Company",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if all {
+		switch v := interface{}(m.GetUpdateMask()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, UpdateCompanyRequestValidationError{
+					field:  "UpdateMask",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, UpdateCompanyRequestValidationError{
+					field:  "UpdateMask",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetUpdateMask()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return UpdateCompanyRequestValidationError{
+				field:  "UpdateMask",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return UpdateCompanyRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// UpdateCompanyRequestMultiError is an error wrapping multiple validation
+// errors returned by UpdateCompanyRequest.ValidateAll() if the designated
+// constraints aren't met.
+type UpdateCompanyRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m UpdateCompanyRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m UpdateCompanyRequestMultiError) AllErrors() []error { return m }
+
+// UpdateCompanyRequestValidationError is the validation error returned by
+// UpdateCompanyRequest.Validate if the designated constraints aren't met.
+type UpdateCompanyRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e UpdateCompanyRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e UpdateCompanyRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e UpdateCompanyRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e UpdateCompanyRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e UpdateCompanyRequestValidationError) ErrorName() string {
+	return "UpdateCompanyRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e UpdateCompanyRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sUpdateCompanyRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = UpdateCompanyRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = UpdateCompanyRequestValidationError{}
